[tool.poetry]
name = "rl_quad"
version = "0.1.0"
description = ""
authors = ["dxy (warp latitude) <daniel.yang17@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
torch = "^1.10.1"
torchvision = "^0.11.2"
torchaudio = "^0.10.1"
numpy = "^1.22.1"
matplotlib = "^3.5.1"
Pillow = "^9.0.0"
cycler = "^0.11.0"
gym = "0.19.0"
pybullet = "^3.2.1"
stable-baselines3 = "^1.4.0"
ray = {extras = ["rllib"], version = "^1.9.2"}
tensorboard = "^2.8.0"
gym-pybullet-drones = {path = "./gym-pybullet-drones", develop = true}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

